<resources>
    <string name="app_name">PetShopApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">PetShopApp</string>
    <string name="action_settings">Ajustes</string>

    <!-- Login -->
    <string name="login_placeholder_email">Correo Electrónico</string>
    <string name="login_placeholder_pswrd">Contraseña</string>
    <string name="login_btn">Ingresar</string>
    <string name="signup_btn">Registrarse</string>

    <!-- Agendar Cita -->
    <string name="menu_agendar_cita">Agendar Cita</string>
    <string name="tv_titulo">Título</string>
    <string name="tv_ubicacion">Ubicacion</string>
    <string name="tv_fecha">Fecha</string>
    <string name="tv_todo_dia">Todo el Día</string>
    <string name="tv_h_ini">Inicia</string>
    <string name="tv_h_fin">Termina</string>
    <string name="bt_crear">Agendar cita</string>

    <!-- Mis Citas -->
    <string name="menu_citas">Mis Citas</string>

    <!-- Productos -->
    <string name="menu_productos">Productos</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!-- Servicios -->
    <string name="menu_servicios">Servicios</string>

    <!-- Ubicacion -->
    <string name="menu_ubicacion">Ubicación</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Adicionar datos de clientes -->
    <string name="menu_cliente">Clientes</string>
    <string name="etCedula">Cédula</string>
    <string name="etNombre">Nombre</string>
    <string name="etApellidos">Apellidos</string>
    <string name="etEdad">Edad</string>
    <string name="btAgregar">Agregar</string>
    <string name="add_cliente">Agregar Cliente</string>
    <string name="clienteadd">Cliente agregado</string>
    <string name="clientefail">Faltan datos</string>
    <string name="tv_foto">Foto de perfil</string>
    <string name="Agregar">Actulizar perfil</string>
    <string name="tv_titulo01">Perfil</string>
    <string name="et_Nombre">Nombre</string>
    <string name="et_Apellidos">Apellidos</string>
    <string name="et_Correo">Correo Electronico</string>
    <string name="menu_perfil">Perfil</string>
    <string name="Actulizar_cliente">Actulizar perfil</string>
    <string name="etID">ID</string>
    <string name="etTitulo">Titulo</string>
    <string name="etDescripcion">Descripcion</string>
    <string name="etFecha">Fecha</string>
    <string name="etInicio">Inicio</string>
    <string name="etFin">Fin</string>
    <string name="menu_persona">Mis Citas</string>
    <string name="add_cita">Agregar Cita</string>
    <string name="citaadd">Cita agregada</string>
    <string name="citafail">Faltan datos</string>
    <string name="contacto">Contactanos</string>
    <string name="ubicanos">Ubicanos</string>
    <string name="paginaWeb">Pagina Web</string>

</resources>