<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_baseline_calendar_today_24"
            android:title="@string/menu_agendar_cita" />

        <item
            android:id="@+id/citasFragment"
            android:icon="@drawable/ic_baseline_web_24"
            android:title="@string/menu_citas" />

        <item
            android:id="@+id/productosFragment"
            android:icon="@drawable/ic_productos"
            android:title="@string/menu_productos" />

        <item
            android:id="@+id/serviciosFragment"
            android:icon="@drawable/ic_servicio"
            android:title="@string/menu_servicios" />

        <item
            android:id="@+id/ubicacionFragment"
            android:icon="@drawable/ic_map"
            android:title="@string/menu_ubicacion" />

    </group>
</menu>