<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:textAlignment="center"
    android:padding="15dp"
    tools:context=".ui.citas.CalendarFragment">

    <EditText
        android:id="@+id/et_titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tv_titulo"
        android:ems="10"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/et_descripcion"
        android:layout_width="match_parent"
        android:layout_height="131dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="Servicios a solicitar... (ej. Corte)"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/bt_fecha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue_gray_light"
        android:textColor="@color/text_secondary"
        android:text="@string/tv_fecha" />

    <CheckBox
        android:id="@+id/cb_todo_dia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_todo_dia"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="100"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt_hora_ini"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue_gray_light"
            android:textColor="@color/text_secondary"
            android:layout_marginRight="8dp"
            android:layout_weight="50"
            android:text="@string/tv_h_ini" />


        <Button
            android:id="@+id/bt_hora_fin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue_gray_light"
            android:textColor="@color/text_secondary"
            android:layout_weight="50"
            android:text="@string/tv_h_fin" />

    </LinearLayout>

    <Button
        android:id="@+id/bt_crear_evento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/bt_crear" />
</LinearLayout>