<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ui.calendar.cliente.ListCliente">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10sp">

        <TextView
            android:id="@+id/tv_titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12sp"
            android:background="#2C7FC3"
            android:text="@string/tv_titulo01"
            android:textAlignment="center"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/et_Nombre"
            android:background="#AFD6F4"
            android:ems="10"
            android:hint="@string/et_Nombre"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/etApellidos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/et_Apellidos"
            android:background="#AFD6F4"
            android:ems="10"
            android:hint="@string/et_Apellidos"
            android:inputType="textPersonName" />



        <EditText
            android:id="@+id/etCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:autofillHints="@string/et_Correo"
            android:background="#AFD6F4"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/et_Correo"
            android:inputType="textPersonName"
            android:lines="3" />








        <TextView
            android:id="@+id/tv_foto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12sp"
            android:background="#EAAFF4"
            android:text="@string/tv_foto"
            android:textAlignment="center"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/imagen"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_marginTop="10dp"
            android:scaleType="fitCenter"
            tools:src="@tools:sample/backgrounds/scenic" />

        <Button
            android:id="@+id/btAgregar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Agregar" />
    </LinearLayout>



</ScrollView>